# SimulationEngine

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
assets/model/: kotak.gltf  planet.gltf  wop.gltf
assets/shader/: basic.frag  basic.vert  fragment.glsl  light.frag  light.vert  vertex.glsl
core/: main.c  main.cpp
core/component/: component.cpp  component.h  light.cpp  light.h  render.h  transform.h
core/render/: camera.c  camera.cpp  camera.h  experiment.h  globject.c  globject.cpp  globject.h  light.cpp  light.h  model.cpp  model.h  object.cpp  object.h  renderer.c  renderer.cpp  renderer.h  shader.c  shader.cpp  shader.h  texture.c  texture.cpp  texture.h
core/utils/: importer.c  importer.cpp  importer.h  types.h
core/windows/: appstate.c  appstate.cpp  appstate.h  context.c  context.cpp  context.h  event.c  event.cpp  event.h  log.h  win32.c  win32.cpp  win32.h
include/: constants.h  engine.h  globals.h  macro.h  multithread.h  threading.h  types.h
lib/: CMakeLists.txt
lib/assimp/: assimp-vc143-mt.exp  assimp-vc143-mt.lib  revision.h
lib/glad/include/glad/: glad.h  glad_wgl.h
lib/glad/src/: glad.c  glad_wgl.c
src/: engine.c  macro.c  main.c  main.cpp  multithread.cpp  threading.cpp
